анимация на текст карточек

--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -234,6 +234,8 @@
     &-description {
       margin-bottom: 30px;
 
+      overflow: hidden;
+
       @include for-size(tablet) {
         margin-bottom: 40px;
       }
