замена цвета на акцент

--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -72,12 +72,6 @@
   top: -113px;
   left: 50%;
   transform: translateX(-50%);
-  @include for-size(desktop) {
-    &:hover {
-      background: url(../images/pictures/products/desktop/background_ice_2x_d.png);
-      background-position: top center;
-    }
-  }
 }
 
 .title-accent {
@@ -160,6 +154,13 @@
 
       &:hover {
         box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.3);
+      }
+
+      @include for-size(desktop) {
+        &:hover .product-img {
+          background: url(../images/pictures/products/desktop/background_ice_2x_d.png);
+          background-position: top center;
+        }
       }
     }
 
