Добавил ховер и фокус кнопкам слайдера

--- a/src/sass/layouts/_slider.scss
+++ b/src/sass/layouts/_slider.scss
@@ -55,6 +55,7 @@
     font-weight: 500;
     line-height: 2.6;
     text-align: center;
+    border: 5px solid $color-main;
     background-color: #fafafa;
     color: #000000;
     background-image: url('./../images/bitmap/slider/underline-slider.png'),
@@ -173,18 +174,30 @@ label {
   &:not(:last-child) {
     margin-right: 18px;
   }
+
+  &:hover,
+  &:focus {
+    display: block;
+    width: 12px;
+    height: 12px;
+    border-radius: 0;
+    background-color: transparent;
+    background-image: url('./../images/vector/house.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 }
 
-.rad-btn:checked + label {
-  display: block;
-  width: 12px;
-  height: 12px;
-  border-radius: 0;
-  background-color: transparent;
-  background-image: url('./../images/vector/house.svg');
-  background-position: center;
-  background-repeat: no-repeat;
-}
+// .rad-btn:checked + label {
+//   display: block;
+//   width: 12px;
+//   height: 12px;
+//   border-radius: 0;
+//   background-color: transparent;
+//   background-image: url('./../images/vector/house.svg');
+//   background-position: center;
+//   background-repeat: no-repeat;
+// }
 
 #r1:checked ~ .s1 {
   margin-left: 0;
