Фиксит отступы в герое и хедере

--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -11,6 +11,6 @@
     margin: 35px 0 6px 10px;
   }
   @media screen and (min-width: 1280px) {
-    margin: 35px 0 15px 0;
+    margin: 37px 0 15px 26px;
   }
 }
