--- a/src/sass/layouts/_section-hero.scss
+++ b/src/sass/layouts/_section-hero.scss
@@ -58,6 +58,8 @@
   @include from(desktop) {
     padding-top: 160px;
     padding-bottom: 45px;
+    padding-left: 20px;
+    padding-right: 20px;
     background: url('../images/hero/desktop/desktop_icecream_1x.png') no-repeat
         bottom right 450px,
       url('../images/hero/desktop/desktop_girl_1x.png') no-repeat bottom right
@@ -206,6 +208,7 @@
   letter-spacing: 0.04em;
 
   @include from(desktop) {
+    margin-right: 77px;
     font-size: 46px;
     line-height: 1.15;
   }
