--- a/src/partials/modal-menu.html
+++ b/src/partials/modal-menu.html
@@ -1,20 +1,20 @@
 <div class="modal-menu is-hidden" data-modal>
   <div class="menu-container">
 
-    <button class="btn-menu-close" type="button" aria-label="Mobile menu close" data-modal-close> 
+    <button class="btn-menu-close" type="button" aria-label="Mobile menu close" data-modal-close>
       <svg class="menu-close" width="14" height="14">
         <use class="icon-close" href="./images/vector/icon-sprite.svg#icon-close"></use>
       </svg>
     </button>
 
     <button class="btn-purchase" type="button" aria-label="Button to buy a product">Buy now</button>
-    
+
     <ul class="menu-list list">
       <li class="menu-item list"><a class="menu-link link active" href="#home">Home</a></li>
-      <li class="menu-item list"><a class="menu-link link" href="#">About us</a></li>
-      <li class="menu-item list"><a class="menu-link link" href="#">How it’s made?</a></li>
-      <li class="menu-item list"><a class="menu-link link" href="#">Our products</a></li>
-      <li class="menu-item list"><a class="menu-link link" href="#">Contact</a></li>
+      <li class="menu-item list"><a class="menu-link link" href="#locations">About us</a></li>
+      <li class="menu-item list"><a class="menu-link link" href="#recipe">How it’s made?</a></li>
+      <li class="menu-item list"><a class="menu-link link" href="#products">Our products</a></li>
+      <li class="menu-item list"><a class="menu-link link" href="#footer">Contact</a></li>
     </ul>
   </div>
 </div>
