--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
- <section class="footer">
+ <section class="footer" id="contacts">
      <div class="container footer-container">
     <div class="footer-text">
         <span>homemade ice cream made</span> <br>
