--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,11 +4,11 @@
             <a href="./index.html" class="logo-link link"> <img class="logo" src="./images/logo/logocircle.png"
                     alt="logo"> <span class="logo-text">icecream</span> </a>
             <ul class="list nav-box">
-                <li class="item"> <a href="" class="link nav-link"> Home </a> </li>
-                <li class="item"> <a href="" class="link nav-link"> About us</a> </li>
-                <li class="item"> <a href="" class="link nav-link"> How it's made?</a> </li>
-                <li class="item"> <a href="" class="link nav-link"> Our product</a> </li>
-                <li class="item"> <a href="" class="link nav-link"> Contacts</a> </li>
+                <li class="item"> <a href="./index.html" class="link nav-link"> Home </a> </li>
+                <li class="item"> <a href="#about-us" class="link nav-link"> About us</a> </li>
+                <li class="item"> <a href="#cow" class="link nav-link"> How it's made?</a> </li>
+                <li class="item"> <a href="#products" class="link nav-link"> Our product</a> </li>
+                <li class="item"> <a href="#contacts" class="link nav-link"> Contacts</a> </li>
             </ul>
 
             <button type="button" class="menu-button" data-menu-button>
@@ -20,7 +20,7 @@
 
 
 
-            <button type="button" class="btn-header">
+            <button type="button" class="btn-header button">
                 <svg class="btn-icon" width="4" height="8">
                     <use href="./images/sprite.svg#icon-cheveron-right">
                     </use>
@@ -38,11 +38,11 @@
                     </svg>Buy now</button>
 
                 <ul class="list mobile-menu">
-                    <li class="item"> <a href="" class="link nav-link"> Home </a> </li>
-                    <li class="item"> <a href="" class="link nav-link"> About us</a> </li>
-                    <li class="item"> <a href="" class="link nav-link"> How it's made?</a> </li>
-                    <li class="item"> <a href="" class="link nav-link"> Our product</a> </li>
-                    <li class="item"> <a href="" class="link nav-link"> Contacts</a> </li>
+                    <li class="item"> <a href="./index.html"class="link nav-link"> Home </a> </li>
+                    <li class="item"> <a href="#about-us"class="link nav-link"> About us</a> </li>
+                    <li class="item"> <a href="#cow" class="link nav-link"> How it's made?</a> </li>
+                    <li class="item"> <a href="#products"class="link nav-link"> Our product</a> </li>
+                    <li class="item"> <a href="#contacts"  class="link nav-link"> Contacts</a> </li>
                 </ul>
 
                 </button>
