--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section class="products" id="products">
     <div class="container products-wrapper">
         <h2 class="products-title">
             <span class="products-part">100% Natural</span> Products
@@ -23,7 +23,7 @@
                 </svg>
                 <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et.<span class="is-hidden"> dolore magna aliqua facilisis.</span></p>
-                <button type="button" class="arrow-button">
+                <button type="button" class="arrow-button button">
                     <svg class="arrow-icon">
                         <use href="./images/sprite.svg#icon-arrow"></use>
                     </svg>
@@ -47,7 +47,7 @@
                 </svg>
                 <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et.<span class="is-hidden"> dolore magna aliqua facilisis.</span></p>
-                <button type="button" class="arrow-button">
+                <button type="button" class="arrow-button button">
                     <svg class="arrow-icon">
                         <use href="./images/sprite.svg#icon-arrow"></use>
                     </svg>
@@ -72,7 +72,7 @@
                 </svg>
                 <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et.<span class="is-hidden"> dolore magna aliqua facilisis.</span></p>
-                <button type="button" class="arrow-button">
+                <button type="button" class="arrow-button button">
                     <svg class="arrow-icon">
                         <use href="./images/sprite.svg#icon-arrow"></use>
                     </svg>
