--- a/src/sass/layouts/_cards.scss
+++ b/src/sass/layouts/_cards.scss
@@ -6,7 +6,7 @@
   @include for-size(tablet) {
     background-image: linear-gradient($bg-white 197px, $bg-pink 197px);
   }
-
+  //Градиент и бэкграунд на десктоп
   @include for-size(desktop) {
     background-image: url(../images/desktop/cards/sectionbgcards.png),
       linear-gradient($bg-white 234px, $bg-pink 234px);
