Добавлен градиент на Cards section

--- a/src/sass/layouts/_cards.scss
+++ b/src/sass/layouts/_cards.scss
@@ -2,7 +2,7 @@
   background-color: $bg-white;
   background-image: linear-gradient($bg-white 170px, $bg-pink 170px);
   background-repeat: no-repeat;
-
+  // Градиент на tablet
   @include for-size(tablet) {
     background-image: linear-gradient($bg-white 197px, $bg-pink 197px);
   }
