--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,5 +6,8 @@
     <li class="hero__item">3</li>
     <li class="hero__item">4</li>
     <li class="hero__item">5</li>
+    <li class="hero__item">6</li>
+    <li class="hero__item">7</li>
   </ul>
+  <p>текст</p>
 </section>
