--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,5 +2,5 @@
     <a href="" class="logo">logo</a>
     <a href="">fghjk</a>
     <p>ghjkl</p>
-    <button type="submit">submit</button>
+    <button class="btn">submit</button>
 </footer>
