--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,13 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './header';
+@import './hero';
+@import './problems';
+@import './we_do_it';
+@import './programm';
+@import './teacher';
+@import './waranty';
+@import './comment';
+@import './form';
+@import './footer';
