Добавляет базовые документы и стили

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,19 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './utils/variables';
+@import './utils/visually-hidden';
+
+@import './base/common';
+@import './base/container';
+
+@import './layout/page-header';
+@import './layout/page-footer';
+@import './layout/page-hero';
+@import './layout/our-features';
+@import './layout/we-solve';
+@import './layout/how-we-do-it';
+@import './layout/our-program';
+@import './layout/teacher';
+@import './layout/we-promise.scss';
+@import './layout/feedbacks';
