--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -4,16 +4,17 @@
     --title-text-color: #111518;
     --accent-color: #FF6B09;
     --primary-white-color: #ffffff;
+    --primary-background-color:  #E5E5E5;
 }
     
-    img{
-        display: block;
-        max-width: 100%;
-        height: auto;
-    }
-    
-    .list{
-        padding: 0;
-        margin: 0;
-        list-style: none;
-    }
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.list{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
