--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,5 +4,14 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
-@import './variables';
+@import './base/variables';
+@import './base/visually-hidden';
+
+@import './layout/section';
+@import './layout/container';
+
+@import './components/body';
+
+
+
+
