Добавляет .scss файл для лого

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,8 @@
 @import './base/common';
 @import './base/container';
 
+@import './components/page-logo';
+
 @import './layout/page-header';
 @import './layout/page-footer';
 @import './layout/page-hero';
