Добавляет .scss для секции

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import './base/common';
 @import './base/container';
 
+@import './components/section';
 @import './components/page-logo';
 
 @import './layout/page-header';
