--- a/src/sass/components/_base.scss
+++ b/src/sass/components/_base.scss
@@ -13,6 +13,12 @@ p {
   text-decoration: none;
   list-style: none;
 }
+img {
+  display: block;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+}
 .container {
   max-width: 320px;
   padding: 0 20px;
