исправляет путь к иконке

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
         <div class="footer__contacts">
             <a class="footer__logo">Hell
                 <svg class="logo__icon" width="22" height="30">
-                    <use href="../images/sprite.svg#icon-flame"></use>
+                    <use href="./images/sprite.svg#icon-flame"></use>
                     </svg>EN
             </a>
         </div>
