--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -4,7 +4,8 @@
  * Все паршалы подключаются сюда.
  */
 .example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+ Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
   color: #212121;
   max-width: 960px;
@@ -27,10 +28,8 @@
   --title-text-color: #111518;
   --accent-color: #FF6B09;
   --primary-white-color: #ffffff;
-<<<<<<< Updated upstream
-=======
   --primary-background-color: #ffffff;
->>>>>>> Stashed changes
+
 }
 
 img {
@@ -44,9 +43,6 @@ img {
   margin: 0;
   list-style: none;
 }
-<<<<<<< Updated upstream
-=======
-
 .visually-hidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -208,5 +204,4 @@ img {
 .photo {
   margin: 0 auto;
 }
->>>>>>> Stashed changes
 /*# sourceMappingURL=main.css.map */
