Внесла изменения в паршалы

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,6 +1,6 @@
 :root{
     --primaty-text-color: #3D3D3D;
-    --secondary-text-colot: #B9B9B9 ;
+    --secondary-text-color: #B9B9B9 ;
     --title-text-color: #111518;
     --accent-color: #FF6B09;
     --primary-white-color: #ffffff;
