--- a/src/sass/components/_body.scss
+++ b/src/sass/components/_body.scss
@@ -1,11 +1,9 @@
 .body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Montserrat;
   font-size: 20px;
   line-height: 1.4;
   
   max-width: 1688px;
-  padding: 15px;
 
   color: var(--title-text-color);
   background-color: var(--primary-background-color);
