--- a/src/partials/how.html
+++ b/src/partials/how.html
@@ -5,20 +5,60 @@
             Как мы это делаем
         </h2>
         <ul class="how-we-do-it-list">
+
             <li class="how-we-do-it-item">
-                <svg></svg>
-                <h3 class="how-we-do-it-list-title">Адаптированная программа
-                подготовки к ВНО</h3>
+                <!--<svg></svg>-->
+                <h3 class="how-we-do-it-list-title">Адаптированная программа подготовки к ВНО</h3>
                 <p class="how-we-do-it-list-text">
                     Ты будешь изучать грамматику и лексику одновременно. И ты научишься писать сочинения.
                 </p>
-
             </li>
-            <li class="how-we-do-it-item"></li>
-            <li class="how-we-do-it-item"></li>
-            <li class="how-we-do-it-item"></li>
-            <li class="how-we-do-it-item"></li>
-            <li class="how-we-do-it-item"></li>
+
+            <li class="how-we-do-it-item">
+                <!--<svg></svg>-->
+                <h3 class="how-we-do-it-list-title">Аудитория и онлайн-обучение</h3>
+                <p class="how-we-do-it-list-text">
+                    Учитель поможет не только в аудитории, но и во время домашней подготовки.
+                    Родители могут участвовать в чате при желании.
+                </p>
+            </li>
+
+            <li class="how-we-do-it-item">
+                <!--<svg></svg>-->
+                <h3 class="how-we-do-it-list-title">Привычка читать на английском языке</h3>
+                <p class="how-we-do-it-list-text">
+                    Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить на телефон дважды в неделю.
+                </p>
+            </li>
+
+            <li class="how-we-do-it-item">
+                <!--<svg></svg>-->
+                <h3 class="how-we-do-it-list-title">Психологическая поддержка</h3>
+                <p class="how-we-do-it-list-text">
+                    Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности
+                    в себе.
+                </p>
+            </li>
+
+            <li class="how-we-do-it-item">
+                <!--<svg></svg>-->
+                <h3 class="how-we-do-it-list-title">Обучение по авторским пособиям</h3>
+                <p class="how-we-do-it-list-text">
+                    Тебе не нужно тратить время
+                    на самостоятельный поиск материала и ничего покупать дополнительно. Мы составили
+                    2 пособия для тебя.
+                </p>
+            </li>
+
+            <li class="how-we-do-it-item">
+                <!--<svg></svg>-->
+                <h3 class="how-we-do-it-list-title">Умение воспринимать устную английскую речь</h3>
+                <p class="how-we-do-it-list-text">
+                    “F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать
+                    и разбирать аудиозаписи
+                    в соответствии с изучаемой лексикой.
+                </p>
+            </li>
         </ul>
 
     </div>
