--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -1,5 +1,7 @@
 .how-we-do-it-title {
+  margin-top: 50px;
   margin-bottom: 30px;
+  font-family: $font;
 }
 
 .how-we-do-it-item {
@@ -7,4 +9,30 @@
   height: 280px;
   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
   margin-bottom: 15px;
+}
+
+.how-we-do-it-item:hover,
+.how-we-do-it-item:focus {
+  background-color: $orange;
+  color: $white-font;
+}
+
+.how-we-do-it-list-title {
+  font-family: $font;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 0.08em;
+  margin-bottom: 35px;
+}
+
+.how-we-do-it-list-text {
+  font-family: $font;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 20px;
+  color: $light-font;
+  text-align: center;
+  letter-spacing: 0.08em;
 }
