adds hover/focus

--- a/src/partials/how.html
+++ b/src/partials/how.html
@@ -16,7 +16,7 @@
 
             <li class="how-we-do-it-item">
                 <!--<svg></svg>-->
-                <h3 class="how-we-do-it-list-title">Аудитория и онлайн-обучение</h3>
+                <h3 class="how-we-do-it-list-title">Аудитория и <br>онлайн-обучение</h3>
                 <p class="how-we-do-it-list-text">
                     Учитель поможет не только в аудитории, но и во время домашней подготовки.
                     Родители могут участвовать в чате при желании.
@@ -33,7 +33,7 @@
 
             <li class="how-we-do-it-item">
                 <!--<svg></svg>-->
-                <h3 class="how-we-do-it-list-title">Психологическая поддержка</h3>
+                <h3 class="how-we-do-it-list-title">Психологическая <br>поддержка</h3>
                 <p class="how-we-do-it-list-text">
                     Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности
                     в себе.
