--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -17,6 +17,11 @@
   color: $white-font;
 }
 
+.how-we-do-it-item:hover .how-we-do-it-list-text,
+.how-we-do-it-item:focus .how-we-do-it-list-text {
+  color: $white-font;
+}
+
 .how-we-do-it-list-title {
   font-family: $font;
   font-weight: bold;
