--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -2,13 +2,14 @@
   margin-top: 50px;
   margin-bottom: 30px;
   font-family: $font;
+  text-align: center;
 }
 
 .how-we-do-it-item {
   width: 280px;
   height: 280px;
   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
-  margin-bottom: 15px;
+  padding: 30px 25px 25px 25px;
 }
 
 .how-we-do-it-item:hover,
