--- a/src/partials/section-teacher.html
+++ b/src/partials/section-teacher.html
@@ -1,18 +1,23 @@
-<section>
-  <div>
-    <h2>Преподаватель</h2>
-
-    <div>
-      <h3>Елена Морева</h3>
-      <ul>
-        <li>Опыт подготовки учеников к ВНО - 6 лет</li>
-        <li>Собственный результат сдачи ВНО - 197 баллов 2 года подряд</li>
-        <li>
+<!--Преподаватель-->
+<section class="section">
+  <div class="container">
+    <h2 class="subtitle">Преподаватель</h2>
+    <img class="image-teacher" src="#" alt="#" />
+    <div class="teacher-list-container">
+      <h3 class="thacher-name">Елена Морева</h3>
+      <ul class="teacher-list list">
+        <li class="teacher-list-item">
+          Опыт подготовки учеников к ВНО - 6 лет
+        </li>
+        <li class="teacher-list-item">
+          Собственный результат сдачи ВНО - 197 баллов 2 года подряд
+        </li>
+        <li class="teacher-list-item">
           Сдала на отлично международный аналог ВНО - Кембриджский PET
           (Preliminary English Test)
         </li>
       </ul>
-      <div>
+      <div class="teacher-list-container-text">
         <p>
           Высшее образование получила в Институте международных отношений НАУ по
           специальности переводчик-аналитик. В свободное время проходит курсы от
@@ -24,27 +29,30 @@
           Tools for Teaching and Learning (University of Houston).
         </p>
       </div>
-      <a href="#">Cambrige English Entry Level Certificate</a>
+      <a class="teacher-link" href="#"
+        >Cambrige English Entry Level Certificate</a
+      >
     </div>
   </div>
 </section>
-<section>
-  <div>
-    <h2>Мы гарантируем</h2>
-    <ul>
-      <li>
+<!--Мы гарантируем-->
+<section class="section">
+  <div class="container">
+    <h2 class="subtitle">Мы гарантируем</h2>
+    <ul class="guarantee-list list">
+      <li class="guarantee-list-item">
         Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
         тестировании. Иначе мы вернем деньги.*
       </li>
-      <li>
+      <li class="guarantee-list-item">
         Ты научишься писать сочинения минимум на 10 баллов из 14. В то время как
         20% учеников получили за сочинение 0.
       </li>
-      <li>
+      <li class="guarantee-list-item">
         Ты будешь заниматься в своем районе. Мы выберем место проведения занятий
         после формирования команд.
       </li>
-      <li>
+      <li class="guarantee-list-item">
         Команды будут сформированы, исходя из начального уровня учеников. Мы
         учитываем особенности каждого ученика.
       </li>
