--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -2,8 +2,8 @@
     margin-left: auto;
     margin-right: auto;
 
-    align-items: center;
-    text-align: center;
+    // align-items: center;
+    // text-align: center;
     
     @media screen and(max-width:319px){
         width: 100%;
