aded html for program and advantages

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,11 +4,17 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './base/common';
+
+@import './utils/variables';
+@import './utils/visually-hidden';
+
 @import './header';
 @import './hero';
 @import './problems';
 @import './we_do_it';
-@import './programm';
+@import './program';
+@import './advantages';
 @import './teacher';
 @import './waranty';
 @import './comment';
