--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,4 +5,5 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
-@import './common';
+@import './base/common';
+@import './utils/hidden-title';
