--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -22,3 +22,22 @@ h6,
 p {
   margin: 0 0;
 }
+
+// ul
+.list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+// a
+.link {
+  display: block;
+  text-decoration: none;
+  font-style: normal;
+}
+// img
+.img-responsive {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
