--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -15,9 +15,8 @@
 .container {
   padding: 0 20px;
   margin: 0 auto;
-  @media screen and (max-width: $tablet - 1) {
-    width: $mobile;
-  }
+  width: $mobile;
+
   @media screen and (min-width: $tablet) {
     width: $tablet;
     padding: 0 40px;
@@ -25,5 +24,17 @@
   @media screen and (min-width: $desktop) {
     width: $desktop;
     padding: 0 15px;
+  }
+}
+
+.container {
+  padding: 0px 10px;
+  margin: 0 auto;
+  @media screen and (min-width: $tablet) {
+    width: $tablet;
+  }
+  @media screen and (min-width: $desktop) {
+    width: $desktop;
+    padding: 0px 15px;
   }
 }
