--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,5 +4,8 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
-@import "./page-header.scss"
+@import './utils/variables';
+@import './utils/mixins';
+@import './utils/visually-hidden';
+@import 'base/common';
+@import 'base/container';
