--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -7,6 +7,10 @@
             .item{
                 margin-right: 10px;
 
+                @media screen and(min-width:768px) {
+                    margin-right: 30px;
+                }
+
                 &:last-child{
                     margin-right: 0;
                 }
@@ -14,13 +18,28 @@
     }}
 
     &-reviews{
-        margin-bottom: 20px;
-        padding: 20px;
         box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
        margin-left: auto;
        margin-right: auto;
 
-        .link{
+       @media screen and (min-width:320px){
+        width:280px;
+        padding: 20px;
+        margin-bottom: 20px;}
+
+       @media screen and(min-width:768px){
+        width: 688px;
+        display: flex;
+        padding: 40px;
+        margin-bottom: 30px;
+    }
+    @media screen and(min-width:1344px){
+        width: 1090px;
+        justify-content: center;
+        padding: 50px;
+        margin-bottom: 40px;
+    }
+        .link-reviews{
             color: var(--accent-color);
             position: relative;
             text-decoration-skip-ink: none;
@@ -38,9 +57,6 @@
     
         // }
     }
-
-    @media screen and (min-width:320px){
-        width:280px;}
     
     .logo-vk{
         margin-top: 26.5px;
@@ -50,19 +66,45 @@
         font-style: normal;
         font-weight: 500;
         font-size: 12px;
-        line-height: 15px;
-        text-align: center;
+        line-height: 1.2;
         letter-spacing: 0.08em;
 
         color: var(--secondary-text-color);
 
         margin: 0;
         margin-bottom: 10px;
+
+        @media screen and(max-width: 767px){
+            text-align: center;
+            
+        }
+        @media screen and(min-width: 768px){
+            margin-bottom: 20px;
+        }
+
+        @media screen and(min-width:1344px){
+            font-size: 14px;
+        }
     }
     
     .title{
         color: var(--accent-color);
         margin-bottom: 10px;
+        font-weight: 800;
+        font-size: 14px;
+        line-height: 1.2;
+
+        letter-spacing: 0.08em;
+
+        @media screen and(min-width:767px){
+            margin-bottom: 20px;
+            font-size: 20px;  
+        }
+        @media screen and(min-width:1344px){
+            margin-bottom: 30px;
+            font-size: 30px;
+            
+        }
     }
     .description-text{        
         margin: 0;
@@ -70,6 +112,11 @@
         font-weight: 500;
         font-size: 12px;
         line-height: 1.6;
+
+        @media screen and(min-width:1344px){
+            font-size: 18px;
+            line-height: 1.5;
+        }
     }
 }
    
@@ -80,14 +127,50 @@
     font-weight: 800;
     font-size: 20px;
     line-height: 1.3;
-
-    text-align: center;
     letter-spacing: 0.03em;
 
     margin: 0;
     margin-bottom: 20px;
+
+
+
+    @media screen and(min-width:768px){
+        font-size: 26px;
+        margin-bottom: 30px;
+    }
+
+    @media screen and(min-width:1344px){
+        font-size: 46px;
+        margin-bottom: 40px;
+    }
 }
 
 .photo{
 margin: 0 auto;
+
+@media screen and(min-width:768px){
+    display: block;
+}
+}
+.reviews-picture{
+   
+    @media screen and(min-width:768px){
+        padding-right: 46px;
+    }
+}
+
+.reviews-description{
+    display: block;
+
+    @media screen and(min-width:768px){
+    width: 412px;
+    text-align: start; 
+    margin-left: auto;
+    margin-right: auto;
+    }
+    @media screen and(min-width:1344px){
+        margin: 0;
+        width: 706px;
+    }
+   
 }
