--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
       <span>Hell</span><span></span><span>EN</span>
       <p><span>Адский</span><span>Английский</span></p>
     </a>
-    <button type="button">
+    <button>
       <svg width="" height="" aria-label="мобильное меню">
         <use class="icon-cross" href=""></use>
         <use class="icon-burger" href=""></use>
@@ -15,7 +15,6 @@
       <li><a href="">О нас</a></li>
       <li><a href="">Варианты обучения</a></li>
       <li><a href="">Контакты</a></li>
-      <li><a href=""></a>button</li>
     </ul>
   </nav>
 </header>
