--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,20 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+
+// UTILS
+@import './utils/variables';
+@import './utils/mixins';
+@import './utils/utilities';
+@import './utils/visually-hidden';
+
+// BASE
+@import './base/base';
+@import './base/container';
+
+// COMPONENTS
+@import './components/logo';
+@import './components/button';
+
+// LAYOUT
+@import './layout/header';
