Заданы стили шрифтов для мобильной версии

--- a/src/partials/page-problems.html
+++ b/src/partials/page-problems.html
@@ -2,7 +2,7 @@
 <div class="container">
       <div class="problems-block">
       <h2 class="problems-title">Главные проблемы учеников 
-        на English ВНО, которые мы помогаем решить
+        на English ВНО, которые мы <span class="problems-title-word">помогаем</span> решить
         </h2>
         </div>
         <div class="problems-content">
@@ -17,7 +17,7 @@
             </li>
             <li class="problems-item">
               <h3 class="problems-item-title">— 03</h3>
-              <p class="problems-item-text">Скупой словарный запас для написани сочинения</p>
+              <p class="problems-item-text">Скупой словарный запас для написания сочинения</p>
             </li>
             <li class="problems-item">
               <h3 class="problems-item-title">— 04</h3>
