Разметка стилей для секции преимущества

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,27 +3,27 @@
         <ul class="advantages-list">
             <li class="advantages-list__item">
                 <div class="advantages-list__icon-wrapper">
-                <svg class="advantages-list__icon">
-                    <use href="./images/sprite.svg#icon-female"></use>
-                </svg>
+                    <svg class="advantages-list__icon">
+                        <use href="./images/sprite.svg#icon-female-frame"></use>
+                    </svg>
                 </div>
-                Адаптированная авторская программа ВНО
+                <p class="advantages-list__text">Адаптированная авторская программа ВНО</p>
             </li>
             <li class="advantages-list__item">
                 <div class="advantages-list__icon-wrapper">
                     <svg class="advantages-list__icon">
-                        <use href="./images/sprite.svg#icon-mobile"></use>
+                        <use href="./images/sprite.svg#icon-mobile-frame"></use>
                     </svg>
                 </div>
-                Современные методики обучения
+                <p class="advantages-list__text">Современные методики обучения</p>
             </li>
             <li class="advantages-list__item">
                 <div class="advantages-list__icon-wrapper">
                     <svg class="advantages-list__icon">
-                        <use href="./images/sprite.svg#icon-umbrella"></use>
+                        <use href="./images/sprite.svg#icon-umbrella-frame"></use>
                     </svg>
                 </div>
-                Финансовая гарантия результата
+                <p class="advantages-list__text">Финансовая гарантия результата</p>
             </li>
         </ul>
     </div>
