задано стилі шрифтів

--- a/src/sass/layout/_section.scss
+++ b/src/sass/layout/_section.scss
@@ -1,6 +1,4 @@
-.section{
-    margin: 0 auto;
-
-    display: block;
-    align-items: center;
-    text-align: center;}
+.section {
+  margin: 0 auto;
+  display: block;
+}
