--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,6 @@
 @import './utils/variables';
 @import './base/common';
 @import './components/components';
+
 @import './layout/hero';
+@import './layout/advantages';
