--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -3,6 +3,10 @@
   padding-bottom: 50px;
 }
 
+.hwd-list-svg {
+  fill: $orange;
+}
+
 .how-we-do-it-title {
   margin-bottom: 30px;
   font-family: $font;
