Финальная разметка секции преимущества

--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -43,6 +43,9 @@
   }
 
   @media screen and (min-width: 1400px) {
+    position: relative;
+    @include flex(flex-start, center);
+
     width: 448px;
   }
 }
@@ -66,7 +69,12 @@
   letter-spacing: 0.08em;
 
   @media screen and (min-width: 1400px) {
-    // position: absolute;
+    position: absolute;
+    left: 19%;
     @include font(700, 20px, 1.65);
+  }
+
+  @media screen and (min-width: 1400px) {
+    width: 360px;
   }
 }
