--- a/src/partials/section-teacher.html
+++ b/src/partials/section-teacher.html
@@ -2,7 +2,12 @@
 <section class="section">
   <div class="container">
     <h2 class="subtitle">Преподаватель</h2>
-    <img class="image-teacher" src="#" alt="#" />
+      <img
+        class="image-teacher"
+        src="../images/teacher/teacher320_1x.jpg"
+        alt="учительница"
+      />
+    </picture>
     <div class="teacher-list-container">
       <h3 class="teacher-name">Елена Морева</h3>
       <ul class="teacher-list list">
