--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,23 +1,28 @@
 <section class="problems section">
     <div class="container">
-        <h2 class="title">Главные проблемы учеников <br>
-            на English ВНО,<br> которые
+        <h2 class="title">Главные проблемы учеников на English ВНО, которые
             мы помогаем решить</h2>
         <div class="problems-list__wrapper">
-            <ul class="problems-list list">
-                <li class="problems-list__item"><span class="problems-list__span">01</span>
+            <ul class="problems-list">
+                <li class="problems-list__item">
+                    <span class="problems-list__span">01</span>
                     <span class="problems-list__description">Название грамматики</span>
                 </li>
-                <li class="problems-list__item"><span class="problems-list__span">02</span>
-                    Неумение вомпринимать устную английскую речь</li>
-                <li class="problems-list__item"><span class="problems-list__span">03</span>
-                    Скупой словарный запас для написания сочинения</li>
+                <li class="problems-list__item">
+                    <span class="problems-list__span">02</span>
+                    Неумение вомпринимать устную английскую речь
+                </li>
+                <!-- <li class="problems-list__item"><span class="problems-list__span">03</span>
+                    Скупой словарный запас для написания сочинения
+                </li>
                 <li class="problems-list__item"><span class="problems-list__span">04</span>
-                    Поодготовка в одиночку</li>
+                    Подготовка в одиночку
+                </li>
                 <li class="problems-list__item"><span class="problems-list__span">05</span>
-                    Отсутствие единого ресурса знаний</li>
+                    Отсутствие единого ресурса знаний
+                </li>
                 <li class="problems-list__item"><span class="problems-list__span">06</span>
-                    Недостатой самоорганизации и лень</li>
+                    Недостаток самоорганизации и лень</li> -->
             </ul>
         </div>
     </div>
