Добавляет заголовок секции преимущества

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,5 +1,6 @@
 <section class="advantages section">
     <div class="container">
+        <h2 class="title visually-hidden">Наши преимущества</h2>
         <ul class="advantages-list">
             <li class="advantages-list__item">
                 <div class="advantages-list__icon-wrapper">
