Добавляет Html разметку секции проблемы

--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,17 +1,17 @@
 <section class="problems section">
     <div class="container">
         <h2 class="title">Главные проблемы учеников на English ВНО, которые
-            мы помогаем решить</h2>
+            мы <span>помогаем</span>> решить</h2>
         <div class="problems-list__wrapper">
             <ul class="problems-list">
                 <li class="problems-list__item">
                     <span class="problems-list__span">01</span>
                     <span class="problems-list__description">Название грамматики</span>
                 </li>
-                <li class="problems-list__item">
+                <!-- <li class="problems-list__item">
                     <span class="problems-list__span">02</span>
                     Неумение вомпринимать устную английскую речь
-                </li>
+                </li> -->
                 <!-- <li class="problems-list__item"><span class="problems-list__span">03</span>
                     Скупой словарный запас для написания сочинения
                 </li>
