--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,19 +1,30 @@
 <header>
   <nav>
     <a href="">
-      <span>Hell</span><span></span><span>EN</span>
+      <span>Hell</span
+      ><span
+        ><svg width="14.21" height="19.38">
+          <use href="./images/sprite.svg#icon-fire"></use></svg></span
+      ><span>EN</span>
       <p>
         <span>Адский</span>
-        <svg>
-          <use href=""></use>
-        </svg>
         <span>Английский</span>
       </p>
     </a>
-    <button>
-      <svg width="" height="" aria-label="мобильное меню">
-        <use class="icon-cross" href="./"></use>
-        <use class="icon-burger" href=""></use>
+    <button class="burger-menu">
+      <svg aria-label="мобильное меню">
+        <use
+          width="14.5"
+          height="14.5"
+          class="icon-cross"
+          href="./images/sprite.svg#icon-cross"
+        ></use>
+        <use
+          width="20.5"
+          height="12"
+          class="icon-burger"
+          href="./images/sprite.svg#icon-burger"
+        ></use>
       </svg>
     </button>
     <ul>
@@ -22,5 +33,6 @@
       <li><a href="">Варианты обучения</a></li>
       <li><a href="">Контакты</a></li>
     </ul>
+    <a href="#">Консультация по телефону</a>
   </nav>
 </header>
