--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -1,28 +1,46 @@
+.problems{
+    padding-top: 50px;
+    height: 545px;
+    background-color: var(--title-text-color);
+}
+.problems-content {
+    max-width: 280px;
+    height: 488px;
+    margin-top: 27px;
+    padding: 20px 14px 20px 30px;
+    background-color: var(--primary-white-color);
+}
 .problems-title {
     font-weight: 800;
     font-size: 20px;
-    line-height: 1.35;
+    line-height: 1.3;
     letter-spacing: 0.03em;
     color: var(--primary-white-color);
 }
 .problems-title-word{
     font-weight: 800;
     font-size: 20px;
-    line-height: 1.35;
+    line-height: 1.3;
     letter-spacing: 0.03em;
     color: var(--accent-color);
 }
-.problems-item-title {
+.problems-item-title {    
     font-weight: 700;
     font-size: 14px;
-    line-height: 1.219;
+    line-height: 1.649;
     letter-spacing: 0.08em;
     color: var(--accent-color);
+    &:not(:last-child) {
+    margin-bottom: 5px;}    
 }
 .problems-item-text {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.714;
     letter-spacing: 0.08em;
-    color: var(--title-text-color);
+    color: var(--title-text-color);    
+}
+.problems-item {
+    &:not(:last-child) {
+        margin-bottom: 10px;}
 }
