--- a/src/partials/page-problems.html
+++ b/src/partials/page-problems.html
@@ -1,8 +1,8 @@
 <section class="problems">
 <div class="container">
       <div class="problems-block">
-      <h2 class="problems-title">Главные проблемы учеников 
-        на English ВНО, которые мы <span class="problems-title-word">помогаем</span> решить
+      <h2 class="problems-title">Главные проблемы учеников <br> 
+        на English ВНО, которые <br> мы <span class="problems-title-word">помогаем</span> решить
         </h2>
         </div>
         <div class="problems-content">
