Добавляет стили текста и спрайт иконок

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,5 +1,11 @@
 .hero {
-  &__title {
+  background-image: url('../images/hero1-mobile.png'),
+    url('../images/hero1-mobile.png');
+
+  bg &__title {
+    margin-top: 50px;
+    margin-bottom: 30px;
+
     font-family: Montserrat;
     font-weight: 800;
     font-size: 20px;
@@ -7,5 +13,43 @@
     letter-spacing: 0.03em;
 
     color: #111518;
+  }
+
+  &__desc-wrapper {
+    margin-bottom: 30px;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.57;
+  }
+
+  &__secondDesc {
+    font-weight: 500;
+    color: $text-grey;
+  }
+
+  &__desc {
+    color: $text-dark;
+  }
+
+  &__accentDesc {
+    color: $accent-color;
+  }
+
+  &__button {
+    display: block;
+    padding: 14px 10px;
+    margin: 0 auto 285px auto;
+
+    font-weight: 700;
+    line-height: 1.25;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    text-align: center;
+    text-transform: uppercase;
+
+    color: $white;
+    background-color: $accent-color;
+    border: 2px solid $accent-color;
   }
 }
