--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,20 +3,20 @@
     <ul class="advantages-list">
         <li class="advantages-list__item">
             <svg class="advantages-list__icon">
-                <use href='./images/icons/sprite.svg#icon-open_book'></use>
+                <use href='./images/icons/sprite.svg#icon-mobile_learning'></use>
             </svg>
             <p class="advantages-list__disc">Адаптированная авторская
                 программа ВНО</p>
         </li>
         <li class="advantages-list__item">
             <svg class="advantages-list__icon">
-                <use href='./images/icons/sprite.svg#icon-study_program'></use>
+                <use ></use>
             </svg>
             <p class="advantages-list__disc"></p>
         </li>
         <li class="advantages-list__item">
             <svg class="advantages-list__icon">
-                <use href='./images/icons/sprite.svg#icon-study_program'></use>
+                <use ></use>
             </svg>
             <p class="advantages-list__disc"></p>
         </li>
