--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,9 +2,11 @@
    <div class="container">
         <h2 class="hero__title">Комплексная подготовка к ВНО
         по английскому языку</h2>
-        <p class="hero__secondDesc">Просто не будет.</p>
-        <p class="hero__desc">Но ты гарантировано наберешь</p>
-        <p class="hero__accentDesc">+25 баллов</p>
-        <button type="button">хочу на бесплатное занятие</button>
+        <div class="hero__desc-wrapper">
+            <p class="hero__secondDesc">Просто не будет.</p>
+            <p class="hero__desc">Но ты гарантировано наберешь</p>
+            <p class="hero__accentDesc">+25 баллов</p>
+        </div>
+        <button type="button" class="hero__button">хочу на бесплатное занятие</button>
     </div>
 </section>
