fire/dotted-line

--- a/src/sass/layouts/_guarantee.scss
+++ b/src/sass/layouts/_guarantee.scss
@@ -1,5 +1,7 @@
 .guarantee-wrapper {
 background-color: $sec-ligth-bg;
+padding-top: 30px;
+padding-bottom: 30px;
 }
 
 .accent-color {
@@ -20,6 +22,7 @@ color: $dark-font;
 
 }
 .guarantee-desc {
+
 font-family: "Montserrat", sans-serif;
 font-weight: 500;
 font-size: 12px;
@@ -28,10 +31,29 @@ line-height: 1.67;
 color: $sec-light-font;
 }
 .guarantee-item {
+position: relative;
+
   padding-left: 28px;
   padding-bottom: 30px;
 
-  &:first-child {
-    padding-top: 30px; 
+  border-left: 1px dashed $light-font;
+
+  &:last-child {
+    padding-bottom: 0px; 
+    border-left: none;
    }
+
+    &:before {
+    content: "";
+    width: 15px;
+    height: 20px;
+    background-color: $orange;
+    position: absolute;
+    top: 0px;
+    left:-8px;
+ 
+    // background-repeat: no-repeat;
+    // background-position: 50%;
+    // background-size: cover;
+}
 }
