--- a/src/sass/layouts/_guarantee.scss
+++ b/src/sass/layouts/_guarantee.scss
@@ -2,6 +2,7 @@
 background-color: $sec-ligth-bg;
 padding-top: 30px;
 padding-bottom: 30px;
+padding-left: 7px;
 }
 
 .accent-color {
@@ -44,13 +45,16 @@ position: relative;
    }
 
     &:before {
+    position: absolute;
+
     content: "";
     width: 15px;
     height: 20px;
     background-color: $orange;
-    position: absolute;
+    
     top: 0px;
     left:-8px;
+   
  
     // background-repeat: no-repeat;
     // background-position: 50%;
